--- a/Maquetacion-2/index.html
+++ b/Maquetacion-2/index.html
@@ -3,9 +3,12 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, user-scalable=no"/>
     <title>Maquetacion completa</title>
     <link rel="icon" type="favicon/x-icon" href="img/supertux.png">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/responsive.css">
+
 </head>
 
 <body>
@@ -88,6 +91,8 @@
             <!---Fin de tarjetas-->
         </section>
         <!---Inicio de barra lateral-->
+        <div class="clearfix"></div>
+
 
         <aside id="lateral">
 
